@@ -2,80 +2,82 @@ package com.daepamarket.daepa_market_backend.config;
 
 import com.daepamarket.daepa_market_backend.jwt.oauth.CustomOAuth2UserService;
 import com.daepamarket.daepa_market_backend.jwt.oauth.OAuth2SuccessHandler;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
+    @Value("${custom.cors.allowed-origins}")
+    private String allowedOrigins;
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http, CustomOAuth2UserService customOAuth2UserService, OAuth2SuccessHandler oAuth2SuccessHandler) throws Exception {
         http
-                .cors(Customizer.withDefaults())
+                // ✅ 직접 정의한 corsConfigurationSource를 사용하도록 설정
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(auth -> auth
-                        // ✅ 헬스체크 엔드포인트는 인증 없이 항상 허용
                         .requestMatchers("/actuator/**").permitAll()
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/uploads/**", "/WEB-INF/views/**").permitAll()
                         .requestMatchers("/", "/ws-stomp/**", "/api/**", "/error", "/oauth2/**", "/login/**").permitAll()
-                        //.anyRequest().permitAll()
+                        .anyRequest().authenticated()
                 )
-                //oauth2를 위해 추가
                 .oauth2Login(oauth -> oauth
                         .authorizationEndpoint(auth -> auth
                                 .baseUri("/api/oauth2/authorization"))
                         .redirectionEndpoint(redir -> redir
                                 .baseUri("/api/login/oauth2/code/*"))
-                        // 커스텀 유저 정보 처리 (네이버 → 우리 UserEntity 저장)
                         .userInfoEndpoint(userInfo ->
                                 userInfo.userService(customOAuth2UserService)
                         )
-                        // 로그인 성공 후 JWT 만들고 3000으로 리다이렉트
                         .successHandler(oAuth2SuccessHandler)
                 )
                 .httpBasic(AbstractHttpConfigurer::disable)
-                .formLogin(form -> form.disable());
+                .formLogin(AbstractHttpConfigurer::disable);
 
         return http.build();
     }
 
-    /*
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration cfg = new CorsConfiguration();
-        cfg.setAllowedOriginPatterns(List.of(
-                "http://localhost:3000",
-                "http://127.0.0.1:3000",
-                "http://192.168.*.*:3000",
-                "http://3.34.181.73/",
-                "*"
-                // 운영 도메인 추가
-        ));
-        cfg.setAllowedMethods(List.of("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
-        cfg.setAllowedHeaders(List.of("*"));
-        cfg.setAllowCredentials(true);
-        cfg.setExposedHeaders(List.of("Authorization", "Set-Cookie", "Content-Disposition"));
+        CorsConfiguration config = new CorsConfiguration();
+
+        // ✅ .env에서 읽어온 주소들을 리스트로 변환
+        List<String> origins = new ArrayList<>(Arrays.asList(allowedOrigins.split(",")));
+
+        // 로컬 개발 환경 주소 강제 추가 (중복 방지)
+        if (!origins.contains("http://localhost:3000")) {
+            origins.add("http://localhost:3000");
+        }
+
+        config.setAllowCredentials(true);
+        config.setAllowedOrigins(origins);
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setExposedHeaders(List.of("Authorization", "Set-Cookie", "Content-Disposition"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", cfg);
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
-    */
 
     @Bean
     public PasswordEncoder passwordEncoder() {
